--- a/src/app/header-nav/header-nav.component.html
+++ b/src/app/header-nav/header-nav.component.html
@@ -39,7 +39,7 @@
         <input class="bug" type="checkbox" id="btn2">
         <ul class="nav-menu1">
           <li class="nav-item1">
-            <a [routerLink]="['/profile/:id']">{{profile}}</a>
+            <a [routerLink]="['/profile/me']">{{profile}}</a>
           </li>
           <div class="trait_dessus"><hr></div>
           <li class="nav-item1">
