--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
 <button routerLink="login">Connection</button>
 <button routerLink="register">Inscription</button>
 
+<img class="paralax" src="assets/Sneakers.gif" width="100%" height="100%">
+
