--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,158 +1,13 @@
-/*.form-card {*/
-/*    box-sizing: border-box;*/
-/*    width: 80%;*/
-/*    height: 200px;*/
-/*    margin: 10% auto;*/
-/*    padding: 10px 30px;*/
-/*    box-shadow: lightgray 4px 4px 20px;*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    justify-content: center;*/
-/*}*/
-
-/*#containerButton {*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    margin-top: 40px;*/
-/*}*/
-
-/*button {*/
-/*    background-color: white;*/
-/*    width: 70%;*/
-/*    height: 70px;*/
-/*    border-radius: 2rem;*/
-/*    padding: 15px;*/
-/*    font-size: 20px;*/
-/*    text-align: center;*/
-/*}*/
-
-/*select{*/
-/*    background-color: white;*/
-/*    width: 50%;*/
-/*    border-radius: 2rem;*/
-/*    font-size: 16px;*/
-/*    text-align: center;*/
-/*}*/
-
-/*button:hover {*/
-/*    border-radius: 2rem;*/
-/*    background: #74c2cc;*/
-/*}*/
-
-/*button:active {*/
-/*    border-radius: 2rem;*/
-/*    background: #41a1ae;*/
-/*    color: white;*/
-/*}*/
-
-/*p {*/
-/*    margin-bottom: 30px;*/
-/*    text-align: center;*/
-/*    font-size: 24px;*/
-/*}*/
-
-/*input {*/
-/*    text-align: center;*/
-/*}*/
-
-/*label {*/
-/*    text-align: center;*/
-/*}*/
-
-/*@media screen and (min-width: 768px) and (max-width: 992px) {*/
-/*    button {*/
-/*        width: 50%;*/
-/*    }*/
-/*    .form-card {*/
-/*        height: 200px;*/
-/*    }*/
-/*}*/
-
-/*@media screen and (min-width: 993px) {*/
-/*    button {*/
-/*        width: 40%;*/
-/*    }*/
-/*    */
-/*    .form-card {*/
-/*        height: 200px;*/
-/*    }*/
-/*    */
-/*    p {*/
-/*        margin-bottom: 50px;*/
-/*    }*/
-/*    */
-/*}*/
-
-.principal{
-	display: flex;
-	justify-content: space-evenly;
-	margin: auto;
-}
-
-.profile-card2{
-	width:320px;
+.form-card {
+	box-sizing: border-box;
+	width: 80%;
+	height: 200px;
+	margin: 10% auto;
+	padding: 10px 30px;
+	box-shadow: lightgray 4px 4px 20px;
 	display: flex;
 	flex-direction: column;
-	border: 1px solid gray;
-	transition: all 150ms ease-in-out;
-	border-radius: 2rem;
-}
-.profile-card2:hover{
-	border: 1px solid blue;
-	box-shadow: 0 0 10px 1px;
-}
-.card-header2{
-	text-align: center;
-	background: #00adb5;
-	color: #FAFAFA;
-	border-left: 66px solid #00adb5;
-	border-right: 65px solid #00adb5;
-	padding-bottom: 20px;
-	padding-top: 20px;
-	transition: all 150ms ease-in-out;
-	border-radius: 2rem;
-}
-.card-header2:hover{
-	background: #0960a5;
-	border-left: 66px solid #0960a5;
-	border-right: 65px solid #0960a5;
-}
-.image2{
-	margin-top: -90px;
-	height: 150px;
-	width: 150px;
-	align-self: center;
-	border-radius: 50%;
-	transition: all 150ms ease-in-out;
-	z-index: 100;
-}
-.image2:hover{
-	border-radius: 10%;
-}
-.card-info2{
-	padding: 1em;
-}
-.bottom2 h2{
-	text-align:center;
-}
-.card-footer2{
-	width: 310px;
-	border-top: 1px solid gray;
-	align-self: center;
-}
-.card-footer2 ul{
-	display:flex;
-	justify-content: flex-start;;
-}
-.card-footer2 ul li:last-child{
-	margin-left: 85px;
-}
-.form-group{
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	margin: 10px;
-
+	justify-content: center;
 }
 
 #containerButton {
@@ -163,13 +18,12 @@
 
 button {
 	background-color: white;
-	width: 50%;
+	width: 70%;
 	height: 70px;
 	border-radius: 2rem;
 	padding: 15px;
 	font-size: 20px;
 	text-align: center;
-	margin: 10px;
 }
 
 select{
@@ -191,11 +45,40 @@ button:active {
 	color: white;
 }
 
+p {
+	margin-bottom: 30px;
+	text-align: center;
+	font-size: 24px;
+}
+
 input {
-	border-radius: 2rem;
 	text-align: center;
 }
 
-.updateCard {
-	margin-top: 10px;
+label {
+	text-align: center;
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+	button {
+		width: 50%;
+	}
+	.form-card {
+		height: 200px;
+	}
+}
+
+@media screen and (min-width: 993px) {
+	button {
+		width: 40%;
+	}
+
+	.form-card {
+		height: 200px;
+	}
+
+	p {
+		margin-bottom: 50px;
+	}
+
 }
