--- a/src/app/sneakers/sneakers.component.html
+++ b/src/app/sneakers/sneakers.component.html
@@ -2,15 +2,14 @@
   <div class="containerSneakers">
     <div id="containerButton">
       <button [routerLink]="['/sneakers', id, 'update']">Update Sneakers</button>
-      <button [routerLink]="['/sneakers', id, 'delete']">Delete Sneakers</button>
+      <button (click)="deleteSneakers()" [routerLink]="['/sneakers/:id/delete']">Delete Sneakers</button>
     </div>
     <h1>SNEAKERS</h1>
     <div id="containerButton">
-      <!-- <button (click)="deleteSneakers(sneakersById?)" [routerLink]="['/sneakers/:id/delete']">Delete Sneakers</button> -->
     </div>
     <div class="containerSneakersDetails">
       <div class="containerImg">
-        <img [src]="'https://static.nike.com/a/images/f_auto,cs_srgb/w_1536,c_limit/qkhgcptmdr5i0lljxhot/chaussures-air-max-air-max-day.jpg'" [alt]="sneakersById?.brand">
+        <!-- <img [src]="sneakersById?.pictures" [alt]="sneakersById?.brand"> -->
       </div>
       <div class="containerDetails">
         <h2>Détails de la Sneakers</h2>
@@ -18,9 +17,8 @@
         <h3>Model : {{sneakersById?.model | titlecase}}</h3>
         <p>Postée {{ sneakersById?.createdDate | date: 'le d MMMM yyyy, à HH:mm' }}</p>
         <p>Taille : {{sneakersById?.size}}</p>
-        <p>L'état global de ma sneakers : {{stateOfWearToString(1)}}</p>
-        <p *ngIf="sneakersById?.dateOfPurchase">Date d'achat : {{sneakersById?.dateOfPurchase | date: 'le d MMMM yyyy'}}</p>
-        <p *ngIf="sneakersById?.mainColor">Ma couleur :{{colorsToString(1)}}</p> 
+        <p>L'état global de ma sneakers : {{sneakersById?.stateOfWear}}</p>
+        <p *ngIf="sneakersById?.mainColor">Ma couleur : {{sneakersById?.mainColor}}</p> 
       </div>
     </div>
   </div>
