--- a/src/app/update-sneakers/update-sneakers.component.html
+++ b/src/app/update-sneakers/update-sneakers.component.html
@@ -1,40 +1,36 @@
 <div class="background">
     <div class="containerForm">
-      <div class="form-card">
+      <div class="form-card" *ngIf="updateSneakersForm">
         <h1>UPDATE SNEAKERS</h1>
         <form [formGroup]="updateSneakersForm">   
           <div class="colorForm">
-            <img [src]="'https://static.nike.com/a/images/f_auto,cs_srgb/w_1536,c_limit/qkhgcptmdr5i0lljxhot/chaussures-air-max-air-max-day.jpg'" [alt]="sneakersById?.brand">
-            <div class="form-group" formArrayName="pictures" *ngFor="let picture of picturesForm.controls; let i = index">
+            <!-- <img [src]="sneakersById?.pictures" [alt]="sneakersById?.brand"> -->
+            <!-- <div class="form-group" formArrayName="pictures" *ngFor="let picture of picturesForm.controls; let i = index">
               <label for="picturesForm">URL de ma nouvelle image </label>
               <input id="picturesForm" type="text" formControlName="{{i}}">
-            </div>
+            </div> -->
             <div class="form-group">
               <label for="brand">Marque </label>
-              <input id="brand" type="text" formControlName="brand" placeholder="{{sneakersById?.brand | titlecase}}">
+              <input id="brand" type="text" formControlName="brand">
             </div>
             <div class="form-group">
               <label for="model">Modèle </label>
-              <input id="model" type="text" formControlName="model" placeholder="{{sneakersById?.model | titlecase}}">
+              <input id="model" type="text" formControlName="model">
             </div>
             <div class="form-group">
               <label for="size">Taille </label>
-              <input id="size" type="text" formControlName="size" placeholder="{{sneakersById?.size}}">
+              <input id="size" type="text" formControlName="size">
             </div>
             <div class="form-group">
               <label for="stateOfWear">Etat sneakers </label>
               <select id="stateOfWear" formControlName="stateOfWear">
-                <option id="optionForm" *ngFor="let state of states" [ngValue]="state">{{stateOfWearToString(state)}}</option>
+                <option id="optionForm" *ngFor="let state of states | keyvalue " [ngValue]="state.value">{{state.key}}</option>
               </select>
-            </div>
-            <div class="form-group">
-              <label for="dateOfPurchase">Année d'achat </label>
-              <input id="dateOfPurchase" type="date" formControlName="dateOfPurchase" placeholder="{{sneakersById?.dateOfPurchase | date: 'le d MMMM yyyy'}}">
             </div>
             <div class="form-group">
               <label for="mainColor">Couleur </label>
               <select id="mainColor" formControlName="mainColor">
-                <option id="optionForm" *ngFor="let color of colors" [ngValue]="color">{{colorsToString(color)}}</option>
+                <option id="optionForm" *ngFor="let color of colors | keyvalue" [ngValue]="color.value">{{color.key}}</option>
               </select>
             </div>
             <div class="action-buttons">
@@ -47,15 +43,14 @@
   <div class="containerPreview">
     <div class="sneakers-card" *ngIf="createdPreview$ | async as sneakers">
       <h1>PREVIEW SNEAKERS</h1>
-      <img [src]="sneakers.pictures" [alt]="sneakers.brand">
+      <!-- <img [src]="sneakers.pictures" [alt]="sneakers.brand"> -->
       <h2>Détails de la Sneakers</h2>
       <h2>Marque : {{updateSneakersForm.controls['brand'].value | uppercase }}</h2>
       <h3>Model : {{updateSneakersForm.controls['model'].value | lowercase}}</h3>
       <p>Postée {{ sneakers.createdDate | date: 'le d MMMM yyyy, à HH:mm' }}</p>
       <p>Taille : {{updateSneakersForm.controls['size'].value}}</p>
-      <p>L'état global de ma sneakers : {{stateOfWearToString(updateSneakersForm.controls['stateOfWear'].value)}}</p>
-      <p *ngIf="sneakers.createdDate">Date d'achat : {{updateSneakersForm.controls['dateOfPurchase'].value | date: 'd MMMM yyyy'}}</p>
-      <p *ngIf="sneakers.mainColor">Ma couleur : {{colorsToString(updateSneakersForm.controls['mainColor'].value)}}</p>
+      <p>L'état global de ma sneakers : {{updateSneakersForm.controls['stateOfWear'].value}}</p>
+      <p *ngIf="sneakers.mainColor">Ma couleur : {{(updateSneakersForm.controls['mainColor'].value)}}</p>
     </div>
   </div>
 </div>
