--- a/src/app/auctions/auctions.component.html
+++ b/src/app/auctions/auctions.component.html
@@ -1,5 +1,5 @@
 <div id="containerButton">
-    <button class="createButton"  [routerLink]="['/user/:id/auction/create']">Créer une salle aux enhères</button>
+    <button class="createButton"  [routerLink]="['/auction/create']">Créer une salle aux enhères</button>
 </div>
 <h1>Mes salles aux enchères</h1>
 <hr>
