--- a/src/app/auction-creation/auction-creation.component.html
+++ b/src/app/auction-creation/auction-creation.component.html
@@ -4,19 +4,15 @@
 
         <div class="form-group">
             <label for="sneakers-select">Choose a sneakers :</label>
-            <select name="sneakers" id="sneakers-select" (change)="selectChangeHandler($event)" formControlName="sneakers">
+            <select name="sneakersId" id="sneakers-select" (change)="selectChangeHandler($event)" formControlName="sneakersId">
                 <option default>Choisissez la paire de sneakers</option>
                 <option *ngFor="let sneakers of sneakersByUserId" value="{{sneakers.id}}">
-                    {{sneakers.brand}} - {{sneakers.model}}</option>
+                    {{sneakers.brand}} - {{sneakers.model}} - {{sneakers.mainColor}}</option>
             </select>
         </div>
         <div class="form-group">
             <label for="initialPrice">Prix de départ :</label>
             <input id="initialPrice" type="number" formControlName="initialPrice">
-        </div>
-        <div class="form-group">
-            <label for="endDate">Date de fin :</label>
-            <input id="endDate" type="date" formControlName="endDate">
         </div>
         <div class="action-buttons">
             <button type="submit" (click)="onSubmitForm()" [disabled]="roomForm.invalid">Enregistrer</button>
