--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -11,5 +11,37 @@ h1 {
 
 p {
     margin-bottom: 3rem;
-    text-align: justify;   
+    text-align: justify;
+}
+
+.parallax-text{
+	position: absolute;
+	font-size: 20vw;
+	font-style: italic;
+	margin: 20px;
+}
+
+.parallax-text::after{
+	content: attr(text);
+	position: absolute;
+	z-index: 100;
+	top: 0;
+	left: 0;
+	color: transparent;
+	-webkit-text-stroke: 0.15vw black;
+}
+
+img{
+	margin-top: 50px;
+	width: 66vw;
+	animation: sneakerAnimation 2s cubic-bezier(0.25, 1, 0.5, 1) infinite alternate;
+}
+
+@keyframes sneakerAnimation {
+	0%, 10% {
+		transform:  translate(100vw, 0) rotate(15deg);
+	}
+	90%, 100% {
+		transform:  translate(-5vw, -5vw) rotate(-30deg);
+	}
 }
