--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -10,7 +10,7 @@ margin: 10px;
 	flex-direction: column;
 	border: 1px solid gray;
 	transition: all 150ms ease-in-out;
-	border-radius: 2rem;
+
 }
 .profile-card:hover{
 	border: 1px solid blue;
@@ -25,7 +25,7 @@ margin: 10px;
 	border-right: 65px solid  #00adb5;
 	padding-bottom: 115px;
 	transition: all 150ms ease-in-out;
-	border-radius: 2rem;
+
 }
 .card-header:hover{
 	background: #0960a5;
@@ -58,7 +58,6 @@ margin: 10px;
 	flex-direction: column;
 	border: 1px solid gray;
 	transition: all 150ms ease-in-out;
-	border-radius: 2rem;
 }
 .profile-card2:hover{
 	border: 1px solid blue;
@@ -72,7 +71,6 @@ margin: 10px;
 	border-left: 66px solid #00adb5;
 	border-right: 65px solid #00adb5;
 	transition: all 150ms ease-in-out;
-	border-radius: 2rem;
 	padding-bottom: 20px;
 	padding-top: 20px;
 }
@@ -127,14 +125,26 @@ margin: 10px;
 }
 
 button {
-	background-color: white;
-	width: 50%;
-	height: 70px;
-	border-radius: 2rem;
+	/*background-color: white;*/
+	/*width: 50%;*/
+	/*height: 70px;*/
+	/*border-radius: 2rem;*/
+	/*padding: 15px;*/
+	/*font-size: 20px;*/
+	/*text-align: center;*/
+	/*margin: 10px;*/
+
+	text-transform: uppercase;
+	outline: 0;
+	background: #00adb5;
+
+	border: 0;
 	padding: 15px;
-	font-size: 20px;
-	text-align: center;
-	margin: 10px;
+	color: #FFFFFF;
+	font-size: 14px;
+	-webkit-transition: all 0.3 ease;
+	transition: all 0.3 ease;
+	cursor: pointer;
 }
 
 select{
