--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,84 +1,97 @@
-.form-card {
-	box-sizing: border-box;
-	width: 80%;
-	height: 200px;
-	margin: 10% auto;
-	padding: 10px 30px;
-	box-shadow: lightgray 4px 4px 20px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
+.register-page {
+	width: 360px;
+	padding: 8% 0 0;
+	margin: auto;
 }
 
-#containerButton {
-	display: flex;
-	justify-content: center;
-	margin-top: 40px;
+.form {
+	position: relative;
+	z-index: 1;
+	background: #FFFFFF;
+	max-width: 360px;
+	margin: 0 auto 100px;
+	padding: 45px;
+	text-align: center;
+	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
-button {
-	background-color: white;
-	width: 70%;
-	height: 70px;
-	border-radius: 2rem;
+.form input {
+	outline: 0;
+	background: #f2f2f2;
+	width: 100%;
+	border: 0;
+	margin: 0 0 15px;
 	padding: 15px;
-	font-size: 20px;
+	box-sizing: border-box;
+	font-size: 14px;
+}
+
+.form button {
+	text-transform: uppercase;
+	outline: 0;
+	background: #00adb5;
+	width: 100%;
+	border: 0;
+	padding: 15px;
+	color: #FFFFFF;
+	font-size: 14px;
+	-webkit-transition: all 0.3 ease;
+	transition: all 0.3 ease;
+	cursor: pointer;
+}
+
+.form button:hover, .form button:active, .form button:focus {
+	background: #00adb5;
+}
+
+.form .message {
+	margin: 15px 0 0;
+	color: #b3b3b3;
+	font-size: 12px;
+}
+
+.form .message a {
+	color: #00adb5;
+	text-decoration: none;
+}
+
+.container {
+	position: relative;
+	z-index: 1;
+	max-width: 300px;
+	margin: 0 auto;
+}
+
+.container:before, .container:after {
+	content: "";
+	display: block;
+	clear: both;
+}
+
+.container .info {
+	margin: 50px auto;
 	text-align: center;
 }
 
-select{
-	background-color: white;
-	width: 50%;
-	border-radius: 2rem;
-	font-size: 16px;
-	text-align: center;
+.container .info h1 {
+	margin: 0 0 15px;
+	padding: 0;
+	font-size: 36px;
+	font-weight: 300;
+	color: #1a1a1a;
 }
 
-button:hover {
-	border-radius: 2rem;
-	background: #74c2cc;
+.container .info span {
+	color: #4d4d4d;
+	font-size: 12px;
 }
 
-button:active {
-	border-radius: 2rem;
-	background: #41a1ae;
-	color: white;
+.container .info span a {
+	color: #000000;
+	text-decoration: none;
 }
 
-p {
-	margin-bottom: 30px;
-	text-align: center;
-	font-size: 24px;
+.container .info span .fa {
+	color: #EF3B3A;
 }
 
-input {
-	text-align: center;
-}
-
-label {
-	text-align: center;
-}
-
-@media screen and (min-width: 768px) and (max-width: 992px) {
-	button {
-		width: 50%;
-	}
-	.form-card {
-		height: 200px;
-	}
-}
-
-@media screen and (min-width: 993px) {
-	button {
-		width: 40%;
-	}
-
-	.form-card {
-		height: 200px;
-	}
-
-	p {
-		margin-bottom: 50px;
-	}
-
-}
