--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
-<button routerLink="login">Connection</button>
-<button routerLink="register">Inscription</button>
+<button type="submit" (click)="logout()">Déconnection</button>
+
+<app-carrousel></app-carrousel>
 
