--- a/src/app/header-nav/header-nav.component.html
+++ b/src/app/header-nav/header-nav.component.html
@@ -43,7 +43,7 @@
           </li>
           <div class="trait_dessus"><hr></div>
           <li class="nav-item1">
-            <a [routerLink]="[]">{{disconnect}}</a>
+            <a (click)="logout()" [routerLink]="[]">{{disconnect}}</a>
           </li>
         </ul>
       </div>
