--- a/src/app/sneakers/sneakers.component.html
+++ b/src/app/sneakers/sneakers.component.html
@@ -1,8 +1,8 @@
 <div class="background">
   <div class="containerSneakers">
     <div id="containerButton">
-      <button [routerLink]="['/sneakers', id, 'update']">Update Sneakers</button>
-      <button (click)="deleteSneakers()" [routerLink]="['/sneakers/:id/delete']">Delete Sneakers</button>
+      <button class="btn1" [routerLink]="['/sneakers', id, 'update']">Update Sneakers</button>
+      <button class="btn2" (click)="deleteSneakers()" [routerLink]="['/sneakers/:id/delete']">Delete Sneakers</button>
     </div>
     <h1>SNEAKERS</h1>
     <div id="containerButton">
