--- a/src/app/auction/auction.component.css
+++ b/src/app/auction/auction.component.css
@@ -75,6 +75,26 @@ td {
 	text-align: center;
 }
 
+button {
+	background-color: white;
+	width: 40%;
+	height: 30pxPX;
+	border-radius: 2rem;
+	padding: 15px;
+	font-size: 16px;
+}
+
+button:hover {
+	border-radius: 2rem;
+	background: #74c2cc;
+}
+
+button:active {
+	border-radius: 2rem;
+	background: #41a1ae;
+	color: white;
+}
+
 @media screen and (min-width: 768px) and (max-width: 992px) {
 	.container {
 		margin: 3rem;
