--- a/src/app/created-sneakers/created-sneakers.component.html
+++ b/src/app/created-sneakers/created-sneakers.component.html
@@ -4,10 +4,10 @@
       <h1>AJOUTER SNEAKERS</h1>
       <form [formGroup]="createdSneakersForm">   
         <div class="colorForm">
-          <div class="form-group" formArrayName="pictures" *ngFor="let picture of pictures.controls; let i = index">
+          <!-- <div class="form-group" formArrayName="pictures" *ngFor="let picture of pictures.controls; let i = index">
             <label for="pictures">URL de l'image</label>
             <input id="pictures" type="text" formControlName="{{i}}">
-          </div>
+          </div> -->
           <div class="form-group">
             <label for="brand">Marque</label>
             <input id="brand" type="text" formControlName="brand">
