--- a/src/app/sneakers/sneakers.component.html
+++ b/src/app/sneakers/sneakers.component.html
@@ -5,7 +5,7 @@
   </div>
     <h1>SNEAKERS</h1>
     <div id="containerButton">
-      <!-- <button (click)="deleteSneakers(sneakersById?)" [routerLink]="['/sneakers/:id/delete']">Delete Sneakers</button> -->
+      <button (click)="deleteSneakers(sneakersById?)" [routerLink]="['/sneakers/:id/delete']">Delete Sneakers</button>
     </div>
     <img [src]="'https://static.nike.com/a/images/f_auto,cs_srgb/w_1536,c_limit/qkhgcptmdr5i0lljxhot/chaussures-air-max-air-max-day.jpg'" [alt]="sneakersById?.brand">
     <h2>Détails de la Sneakers</h2>
