--- a/src/app/sneakers-card/sneakers-card.component.html
+++ b/src/app/sneakers-card/sneakers-card.component.html
@@ -1,7 +1,8 @@
 <div class="card">
     <div class="card__thumbnail">
-        <img
-            [src]="sneakers?.pictures?.[0]?.url">
+        <!-- <img
+            [src]="sneakers?.pictures?.[0]?.url"> -->
+            <img src="https://cdn.shopify.com/s/files/1/2358/2817/products/dunk-low-black-white-822113_1200x.png?v=1638813882"/>
         <div class="hover">
             <div class="text">
                 <p>{{sneakers?.model}}</p>
