--- a/src/app/auction/auction.component.css
+++ b/src/app/auction/auction.component.css
@@ -76,23 +76,26 @@ td {
 }
 
 button {
-	background-color: white;
+	margin: 10%;
+	text-transform: uppercase;
+	outline: 0;
+	background: #00adb5;
 	width: 40%;
-	height: 30pxPX;
-	border-radius: 2rem;
+	border: 0;
 	padding: 15px;
-	font-size: 16px;
+	color: #FFFFFF;
+	font-size: 14px;
+	-webkit-transition: all 0.3 ease;
+	transition: all 0.3 ease;
+	cursor: pointer;
 }
 
-button:hover {
-	border-radius: 2rem;
-	background: #74c2cc;
+.btn1 {
+	width: 40%;
 }
 
-button:active {
-	border-radius: 2rem;
-	background: #41a1ae;
-	color: white;
+button:hover,.form button:active,.form button:focus {
+	background: #00adb5;
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
@@ -153,4 +156,13 @@ button:active {
 	.auctions > h3 {
 		margin: 1.5rem;
 	}
+
+	button {
+		width: 60%;
+	}
+
+	.btn1 {
+		width: 30%;
+	}
+
 }
