--- a/src/app/auction/auction.component.html
+++ b/src/app/auction/auction.component.html
@@ -25,7 +25,7 @@
 				type="number"
 				[(ngModel)]="bit"
 			/>
-			<button (click)="onSubmitAuction()" class="bid">Enchérir</button>
+			<button (click)="onSubmitAuction()">Enchérir</button>
 			<p>Prix de départ : {{ room?.initialPrice | currency:'EUR' }}</p>
 			<p>Temps restant pour enchère : {{ room?.endDate | date: "medium":"GMT" }}</p>
 
@@ -35,8 +35,8 @@
 			<p>Marque : {{sneakers?.brand}}</p>
 			<p>Modèle : {{sneakers?.model}}</p>
 			<p>Taille : {{sneakers?.size}}</p>
-			<p>Etat : {{sneakers?.stateOfWear}}</p>
-			<p>Couleur principale : {{sneakers?.mainColor}}</p>
+			<p>Etat : {{stateOfWearToString(sneakers?.stateOfWear)}}</p>
+			<p>Couleur principale : {{colorsToString(sneakers?.mainColor)}}</p>
 
 			<div class="block-description">
 			</div>
@@ -62,7 +62,6 @@
 	</div>
 
 	<div *ngIf="currentUser?.id == room?.ownerId">
-		<button class="deleteRoom" (click)="deleteRoom()">Supprimer la salle</button>
-
+		<button class="btn1" (click)="deleteRoom()">Supprimer la salle</button>
 	</div>
 </div>
