--- a/src/app/auctions/auctions.component.css
+++ b/src/app/auctions/auctions.component.css
@@ -24,6 +24,24 @@ hr {
     width: 100%;
 }
 
+button {
+	text-transform: uppercase;
+	outline: 0;
+	background: #00adb5;
+	width: 40%;
+	border: 0;
+	padding: 15px;
+	color: #FFFFFF;
+	font-size: 14px;
+	-webkit-transition: all 0.3 ease;
+	transition: all 0.3 ease;
+	cursor: pointer;
+}
+
+button:hover,.form button:active,.form button:focus {
+	background: #00adb5;
+}
+
 .createButton {
     margin-right: 2rem;
     background-color: white;
@@ -34,9 +52,7 @@ hr {
     font-size: 16px;
   }
 
-  button:hover {
-    background: #74c2cc;
-  }
+
 
   .pagination {
     display: flex;
