--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -20,7 +20,7 @@
 		</div>
 	</div>
 
-	<div class="profile-card2" *ngIf="updateProfileForm">
+	<div class="profile-card2" *ngIf="displayForm">
 		<div class="card-header2">
 			<h2>Modification du profil</h2>
 		</div>
