--- a/src/app/auction/auction.component.html
+++ b/src/app/auction/auction.component.html
@@ -8,7 +8,7 @@
 </div>
 	<div class="room">
 		<div class="image">
-			<img src="https://assets.hermes.com/is/image/hermesproduct/sneakers-flex--222910ZH02-worn-1-0-0-800-800_b.jpg"
+			<img [src] = "sneakers?.picture"
 			/>
 		</div>
 		<div class="room-details">
