--- a/src/app/sneakers-card/sneakers-card.component.html
+++ b/src/app/sneakers-card/sneakers-card.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card__thumbnail">
         <img
-            [src]="sneakers?.pictures?.[0]?.url">
+            [src]="sneakers?.picture">
         <div class="hover">
             <div class="text">
                 <p>{{sneakers?.model}}</p>
