--- a/src/app/header-nav/header-nav.component.html
+++ b/src/app/header-nav/header-nav.component.html
@@ -6,11 +6,7 @@
     <div class="right">
       <div class="burger">
         <label for="btn" class="icon">
-          <svg viewBox="0 0 100 80" width="40" height="40">
-            <rect width="100" height="15"></rect>
-            <rect y="35" width="100" height="15"></rect>
-            <rect y="70" width="100" height="15"></rect>
-          </svg>
+									<img src="assets/burger.png" class="burger" id="burger">
         </label>
         <input class="bug" type="checkbox" id="btn">
         <ul class="nav-menu">
@@ -52,10 +48,24 @@
         <div class="searchContain">
           <input *ngIf="isDisplayingSearchBar" type="search" id="search" placeholder=" Rechercher ...">
         </div>
-        <button (click)="onClick()">
           <img src="assets/search.png" id="imgSearch">
-        </button>
-
       </div>
     </div>
   </nav>
+<!--<ul>-->
+<!--	<li>Logo</li>-->
+<!--	<li>Recherche</li>-->
+
+<!--	<li>Profil</li>-->
+<!--	<ul>-->
+<!--		<li>Gérer mon profil</li>-->
+<!--		<li>Déconnection</li>-->
+<!--	</ul>-->
+<!--	<li>Burger</li>-->
+<!--	<ul>-->
+<!--		<li>Ajouter une paire </li>-->
+<!--		<li>Ma collection</li>-->
+<!--		<li>Salle d'enchères</li>-->
+<!--		<li> Mes favoris</li>-->
+<!--	</ul>-->
+<!--</ul>-->
