--- a/src/app/auctions/auctions.component.html
+++ b/src/app/auctions/auctions.component.html
@@ -1,15 +1,20 @@
 <div id="containerButton">
-    <button [routerLink]="['/auction/create']">Créer une salle aux enhères</button>
+	<button [routerLink]="['/auction/create']">Créer une salle aux enhères</button>
 </div>
 <h1>Mes salles aux enchères</h1>
-<hr>
+<hr />
 <div class="list">
-    <div *ngFor="let room of usersRooms | paginate: {itemsPerPage: roomsPerPage, currentPage: currentPage}">
-       
-            <app-auction-card [room]="room"></app-auction-card>
-       
-    </div>
+	<div
+		*ngFor="
+			let room of usersRooms
+				| paginate: { itemsPerPage: roomsPerPage, currentPage: currentPage }
+		"
+	>
+		<a [routerLink]="['/auction/', room.id]">
+			<app-auction-card [room]="room"></app-auction-card>
+		</a>
+	</div>
 </div>
 <div class="pagination">
-    <pagination-controls (pageChange)="currentPage = $event"></pagination-controls>
-  </div>
+	<pagination-controls (pageChange)="currentPage = $event"></pagination-controls>
+</div>
