--- a/src/app/update-sneakers/update-sneakers.component.html
+++ b/src/app/update-sneakers/update-sneakers.component.html
@@ -1,8 +1,8 @@
 <div class="background">
     <div class="containerForm">
       <div class="form-card" *ngIf="updateSneakersForm">
-        <h1>UPDATE SNEAKERS</h1>
-        <form [formGroup]="updateSneakersForm">   
+        <h1>MODIFIER MA SNEAKERS</h1>
+        <form [formGroup]="updateSneakersForm">
           <div class="colorForm">
             <!-- <img [src]="sneakersById?.pictures" [alt]="sneakersById?.brand"> -->
             <!-- <div class="form-group" formArrayName="pictures" *ngFor="let picture of picturesForm.controls; let i = index">
