--- a/src/app/delete-auction/delete-auction.component.css
+++ b/src/app/delete-auction/delete-auction.component.css
@@ -8,14 +8,29 @@
 }
 
 button {
-	background-color: white;
-	width: 70%;
-	height: 70px;
-	border-radius: 2rem;
+	text-transform: uppercase;
+	outline: 0;
+	background: #00adb5;
+	width: 60%;
+	border: 0;
+	margin: 5px;
 	padding: 15px;
-	font-size: 20px;
-	text-align: center;
+	color: #FFFFFF;
+	font-size: 14px;
+	-webkit-transition: all 0.3 ease;
+	transition: all 0.3 ease;
+	cursor: pointer;
+	margin: 0;
 }
+
+button:hover,.form button:active,.form button:focus {
+	background: #00adb5;
+}
+
+.action-buttons {
+	display: flex;
+	justify-content: center;
+  }
 
 select{
 	background-color: white;
@@ -25,16 +40,6 @@ select{
 	text-align: center;
 }
 
-button:hover {
-	border-radius: 2rem;
-	background: #74c2cc;
-}
-
-button:active {
-	border-radius: 2rem;
-	background: #41a1ae;
-	color: white;
-}
 
 p {
 	margin-bottom: 30px;
