--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="login-page">
 	<div class="form">
 		<div class="btn1">
-		<button routerLink="login">Connection</button>
+		<button routerLink="login">Connexion</button>
 		</div>
 		<div class="btn2">
 		<button routerLink="register">Inscription</button>
