--- a/src/app/sneakers-card/sneakers-card.component.css
+++ b/src/app/sneakers-card/sneakers-card.component.css
@@ -14,8 +14,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width: 100%;
-  height: 100%;
+  width: 15rem;
+  height: 20rem;
 }
 
 .card__thumbnail>img {
