--- a/src/app/sneakers/sneakers.component.html
+++ b/src/app/sneakers/sneakers.component.html
@@ -7,7 +7,7 @@
     <h1>SNEAKERS</h1>
     <div class="containerSneakersDetails">
       <div class="containerImg">
-        <!-- <img [src]="sneakersById?.pictures" [alt]="sneakersById?.brand"> -->
+        <img [src]="sneakersById?.picture" [alt]="sneakersById?.brand">
       </div>
       <div class="containerDetails">
         <h2>Détails de la Sneakers</h2>
@@ -16,7 +16,7 @@
         <p>Postée {{ sneakersById?.createdDate | date: 'le d MMMM yyyy, à HH:mm' }}</p>
         <p>Taille : {{sneakersById?.size}}</p>
         <p>L'état global de ma sneakers : {{stateOfWearToString(sneakersById?.stateOfWear)}}</p>
-        <p *ngIf="sneakersById?.mainColor">Ma couleur : {{colorsToString(sneakersById?.mainColor)}}</p> 
+        <p *ngIf="sneakersById?.mainColor">Ma couleur : {{colorsToString(sneakersById?.mainColor)}}</p>
       </div>
     </div>
   </div>
