--- a/src/app/auction/auction.component.html
+++ b/src/app/auction/auction.component.html
@@ -1,4 +1,10 @@
 <div class="container">
+	<button
+	class="btn-back"
+	(click)="backClicked()"
+>
+	Retour
+</button>
 	<div class="row" *ngIf="showMsg">
 		<div class="col-xs-12">
 			<p class="alert-success">
