--- a/src/app/auctions/auctions.component.html
+++ b/src/app/auctions/auctions.component.html
@@ -1,5 +1,5 @@
 <div id="containerButton">
-	<button [routerLink]="['/auction/create']">Créer une salle aux enhères</button>
+	<button [routerLink]="['/auction/create']">Créer une salle aux enchères</button>
 </div>
 <h1>Mes salles aux enchères</h1>
 <hr />
