--- a/src/app/auctions/auctions.component.css
+++ b/src/app/auctions/auctions.component.css
@@ -28,7 +28,7 @@ button {
 	text-transform: uppercase;
 	outline: 0;
 	background: #00adb5;
-	width: 40%;
+	width: 15rem;
 	border: 0;
 	padding: 15px;
 	color: #FFFFFF;
@@ -36,6 +36,7 @@ button {
 	-webkit-transition: all 0.3 ease;
 	transition: all 0.3 ease;
 	cursor: pointer;
+	margin-right: 1.5rem;
 }
 
 button:hover,.form button:active,.form button:focus {
