--- a/src/app/collection/collection.component.css
+++ b/src/app/collection/collection.component.css
@@ -39,12 +39,13 @@ button {
 	-webkit-transition: all 0.3 ease;
 	transition: all 0.3 ease;
 	cursor: pointer;
+	margin-right: 1.5rem;
 }
 
 button:hover,.form button:active,.form button:focus {
 	background: #00adb5;
 }
-  
+
   select{
     background-color: white;
     width: 50%;
@@ -60,7 +61,7 @@ button:hover,.form button:active,.form button:focus {
     width: 96%;
   }
 
-@media screen and (min-width: 768px) and (max-width: 992px) {   
+@media screen and (min-width: 768px) and (max-width: 992px) {
     div {
         width: 25%;
     }
@@ -79,4 +80,3 @@ button:hover,.form button:active,.form button:focus {
         width: 15%;
       }
     }
-    
