--- a/src/app/sneakers/sneakers.component.css
+++ b/src/app/sneakers/sneakers.component.css
@@ -1,176 +1,223 @@
-    *{
-        background-color: white;
-    }
-    
-    .background{
-        display: flex;
-        justify-content: center;
-        width: 100%;
-    }
-    
-    .containerSneakers {
-        align-items: center;
-        width: 90%;
-        margin: 20px auto;
-        background-color: white;
-        box-sizing: border-box;
-        padding: 10PX;
-        background-color: white;
-        height: 100%;
-        margin: 20px;
-        padding: 40px;
-        position: relative;
-        margin: 2rem;
-        background-color: white;
-        box-shadow: 5px 5px 10px #999;
-    }
-    
-    .containerSneakersDetails {
-        display: flex;
-        flex-direction: row;
-    }
-    
-    .containerImg {
-        height: 100%;
-        background-color: white;
-        padding: 5%;
-        text-align: center;
-    }
-    
-    .containerDetails {
-        background-color: white;
-    }
-    
-    h1 {
-        background-color: white;
-        text-align: center;
-        font-size: 40px;
-    }
-    
-    h2 {
-        background-color: white;
-        margin: 0;
-        font-size: 30px;
-        margin-top: 10%;
-    }
-    
-    h3 {
-        background-color: white;
-        margin: 0;
-        font-size: 20px;
-    }
-    
-    p {
-        background-color: white;
-        margin: 10px;
-        font-size: 20px;
-    }
-    
-    img {
-        background-color: white;
-        width: 100%;
-        margin: 0;
-    }
-    
-    #containerButton {
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        padding: 0;
-        width: 100%;
-        background-color: white;
-        margin-bottom: 30px;
-        text-align: right;
-    }
+* {
+	background-color: white;
+}
 
-    button {
-        text-transform: uppercase;
-        outline: 0;
-        background: #00adb5;
-        width: 50%;
-        border: 0;
-        padding: 15px;
-        color: #FFFFFF;
-        font-size: 14px;
-        -webkit-transition: all 0.3 ease;
-        transition: all 0.3 ease;
-        cursor: pointer;
-        margin: 0;
-        justify-content: space-between;
-    }
-    
-    button:hover,.form button:active,.form button:focus {
-        background: #00adb5;
-    }
+.background {
+	display: flex;
+	justify-content: center;
+	width: 100%;
+}
 
-    .btn1 {
-        width: 40%;
-        margin: 2%;
-    }
+.containerSneakers {
+	align-items: center;
+	width: 90%;
+	margin: 20px auto;
+	background-color: white;
+	box-sizing: border-box;
+	padding: 10px;
+	background-color: white;
+	height: 100%;
+	margin: 20px;
+	padding: 40px;
+	position: relative;
+	margin: 2rem;
+	background-color: white;
+	box-shadow: 5px 5px 10px #999;
+}
 
-    .btn2 {
-        width: 40%;
-        margin: 2%;
-    }
-    
-    select{
-        background-color: white;
-        width: 50%;
-        border-radius: 2rem;
-        font-size: 16px;
-        text-align: center;
-    } 
-    
-    @media screen and (min-width: 768px) and (max-width: 992px) {
-        
-        h1 {
-            font-size: 50px;
-        }
-        
-        h2 {
-            font-size: 40px;
-        }
-        
-        h3 {
-            
-            font-size: 30px;
-        }
-        
-        p {
-            
-            font-size: 30px;
-        }
-    }
-    
-    @media screen and (min-width: 993px) {
-        
-        .containerSneakers {
-            width: 70%;
-            padding: 60px;
-        }
-        
-        h1 {
-            font-size: 50px;
-        }
-        
-        h2 {
-            font-size: 40px;
-        }
-        
-        h3 {
-            
-            font-size: 30px;
-        }
-        
-        p {
-            
-            font-size: 30px;
-        }
-        
-        img{
-            width: 80%;
-            display: block;  
-            margin: 10%;
-            max-height: 25%;
-        }
-    }
+.containerSneakersDetails {
+	display: flex;
+	flex-direction: row;
+	margin-top: 2rem;
+}
+
+.containerDetails {
+	background-color: white;
+	padding: 2%;
+}
+
+h1 {
+	background-color: white;
+	text-align: center;
+	font-size: 40px;
+}
+
+h2 {
+	background-color: white;
+	text-align: center;
+	font-size: 30px;
+	margin-bottom: 2rem;
+}
+
+h3 {
+	background-color: white;
+	margin: 0;
+	font-size: 20px;
+}
+
+p {
+	margin: 10px;
+	font-size: 1.2rem;
+}
+
+.containerImg {
+	max-height: 70vh;
+	max-width: 35vw;
+}
+
+img {
+	background-color: white;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	margin: 0;
+}
+
+#containerButton {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	padding: 0;
+	width: 100%;
+	background-color: white;
+	margin-bottom: 30px;
+	text-align: right;
+	margin-top: 3rem;
+}
+
+button {
+	text-transform: uppercase;
+	outline: 0;
+	width: 50%;
+	border: 0;
+	padding: 15px;
+	color: #ffffff;
+	font-size: 14px;
+	-webkit-transition: all 0.3 ease;
+	transition: all 0.3 ease;
+	cursor: pointer;
+	margin: 0;
+	justify-content: space-between;
+}
+
+.btn1:hover,
+.form .btn1:active,
+.form .btn1:focus {
+	background: #005458;
+}
+
+.btn1 {
+	width: 40%;
+	margin: 2%;
+	background: #00adb5;
+}
+
+.btn2 {
+	width: 40%;
+	margin: 2%;
+	background: red;
+}
+
+.btn-back {
+	background-color: rgb(186, 186, 186);
+	width: 6rem;
+	align-items: flex-end;
+	margin-top: 1.3rem;
+	margin-left: 5rem;
+}
+
+.btn2:hover,
+.form .btn2:active,
+.form .btn2:focus {
+	background: rgb(121, 1, 1);
+}
+
+select {
+	background-color: white;
+	width: 50%;
+	border-radius: 2rem;
+	font-size: 16px;
+	text-align: center;
+}
+
+.details-p {
+	align-items: center;
+}
+.cercle {
+	width: 60px;
+	height: 60px;
+	border-radius: 40px;
+	background: #00adb5;
+	text-align: center;
+	color: #ffffff;
+	line-height: 60px;
+	font-weight: bold;
+	font-size: 1.3rem;
+}
+
+.color {
+	font-weight: bold;
+}
+
+.state {
+	font-weight: bold;
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+	h1 {
+		font-size: 50px;
+	}
+
+	h2 {
+		font-size: 40px;
+	}
+
+	h3 {
+		font-size: 30px;
+	}
+
+	p {
+		font-size: 1.2rem;
+	}
+
+	.containerSneakersDetails {
+		display: flex;
+		justify-content: space-around;
+		margin-top: 2rem;
+	}
+}
+
+@media screen and (min-width: 993px) {
+	.containerSneakers {
+		width: 70%;
+		padding: 60px;
+	}
+
+	h1 {
+		font-size: 50px;
+	}
+
+	h2 {
+		font-size: 40px;
+	}
+
+	h3 {
+		font-size: 30px;
+	}
+
+	.details-p {
+		display: flex;
+		justify-content: space-between;
+	}
+
+	p {
+		font-size: 1.2rem;
+	}
+
+	.containerSneakersDetails {
+		display: flex;
+		justify-content: space-around;
+		flex-direction: row;
+		margin-top: 2rem;
+	}
+}
