--- a/src/app/auctions/auctions.component.html
+++ b/src/app/auctions/auctions.component.html
@@ -5,9 +5,9 @@
 <hr>
 <div class="list">
     <div *ngFor="let room of usersRooms | paginate: {itemsPerPage: roomsPerPage, currentPage: currentPage}">
-       
-            <app-auction-card [room]="room"></app-auction-card>
-       
+        <a [routerLink]="['/auction/', room.id]">  
+        <app-auction-card [room]="room"></app-auction-card>
+        </a>  
     </div>
 </div>
 <div class="pagination">
