--- a/src/app/created-sneakers/created-sneakers.component.css
+++ b/src/app/created-sneakers/created-sneakers.component.css
@@ -66,9 +66,7 @@ label {
 	background-color: white;
 }
 
-input,
-textarea {
-	border-radius: 2rem;
+input, textarea {
 	width: 50%;
 	background-color: white;
 	text-align: center;
@@ -102,7 +100,6 @@ button:hover,.form button:active,.form button:focus {
 select {
 	background-color: white;
 	width: 50%;
-	border-radius: 2rem;
 	font-size: 16px;
 	text-align: center;
 }
@@ -186,10 +183,6 @@ select {
 	.containerForm {
 		width: 40%;
 		margin: 20px auto;
-	}
-
-	button {
-		height: 80px;
 	}
 
 	h1 {
