modification css + création bouton return

--- a/src/app/created-sneakers/created-sneakers.component.html
+++ b/src/app/created-sneakers/created-sneakers.component.html
@@ -1,4 +1,11 @@
 <div class="background">
+	<div class="container">
+		<button
+		class="btn-back"
+		(click)="backClicked()"
+	>
+		Retour
+	</button>
 	<div class="containerForm">
 		<div class="form-card">
 			<h1>AJOUTER SNEAKERS</h1>
