--- a/src/app/created-sneakers/created-sneakers.component.css
+++ b/src/app/created-sneakers/created-sneakers.component.css
@@ -9,11 +9,6 @@
 	height: 100%;
 }
 
-.containerPreview {
-	width: 90%;
-	margin: 20px auto;
-}
-
 .containerForm {
 	width: 90%;
 	margin: 20px auto;
@@ -95,7 +90,15 @@ button:hover,.form button:active,.form button:focus {
 .action-buttons {
 	display: flex;
 	justify-content: center;
-  }
+}
+
+.btn-back {
+	background-color: rgb(186, 186, 186);
+	width: 6rem;
+	align-items: flex-end;
+	margin-top: 1.3rem;
+	margin-left: 5rem;
+}
 
 select {
 	background-color: white;
@@ -131,38 +134,38 @@ select {
 		width: 40%;
 		margin: 20px auto;
 	}
-
+	
 	.containerForm {
 		width: 40%;
 		margin: 20px auto;
 	}
-
+	
 	h1 {
 		margin-top: 5%;
 		margin-bottom: 10%;
 	}
-
+	
 	.form-card {
 		padding: 10px;
 		height: 100%;
 		margin: 20px;
 	}
-
+	
 	.sneakers-card {
 		padding: 10px;
 		height: 100%;
 		margin: 20px;
 	}
-
+	
 	.background {
 		display: flex;
 		flex-direction: row;
 	}
-
+	
 	button {
 		height: 60px;
 	}
-
+	
 	.form-group {
 		margin: 15px auto;
 	}
@@ -174,47 +177,47 @@ select {
 		flex-direction: row;
 		height: 100%;
 	}
-
+	
 	.containerPreview {
 		width: 40%;
 		margin: 20px auto;
 	}
-
+	
 	.containerForm {
 		width: 40%;
 		margin: 20px auto;
 	}
-
+	
 	h1 {
 		margin-top: 5%;
 		margin-bottom: 10%;
 	}
-
+	
 	input,
 	textarea {
 		font-size: 16px;
 	}
-
+	
 	select {
 		font-size: 16px;
 	}
-
+	
 	button {
 		height: 50px;
 	}
-
+	
 	.form-card {
 		padding: 10px;
 		height: 100%;
 		margin: 20px;
 	}
-
+	
 	.sneakers-card {
 		padding: 10px;
 		height: 100%;
 		margin: 20px;
 	}
-
+	
 	.form-group {
 		margin: 25px auto;
 	}
