--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -17,20 +17,23 @@ a {
 
 .containerSearch {
     align-items: center;
-    width: 90%;
-    margin: 20px auto;
+    width: 100%;
     padding: 10PX;
     background-color: white;
     height: 100%;
-    margin: 20px;
-    padding: 40px;
-    position: relative;
-    margin: 2rem;
     background-color: white;
+    display: flex;
+    flex-direction:column;
+    justify-content: space-around;
 }
 
 .form {
-    justify-content: flex-start;
+    margin: 10px auto;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: white;
 }
 
 h1 {
@@ -54,10 +57,12 @@ img {
 
 #containerButton {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 0;
-    width: 100%;
+    margin-top: 20px;
+    width: 50%;
     background-color: white;
     margin-bottom: 30px;
     text-align: right;
@@ -67,7 +72,7 @@ button {
     text-transform: uppercase;
     outline: 0;
     background: #00adb5;
-    width: 50%;
+    width: 100%;
     border: 0;
     padding: 15px;
     color: #FFFFFF;
@@ -81,11 +86,6 @@ button {
 
 button:hover,.form button:active,.form button:focus {
     background: #00adb5;
-}
-
-.btn1 {
-    width: 40%;
-    margin: 2%;
 }
 
 select, input{
@@ -104,6 +104,36 @@ select, input{
     p {   
         font-size: 30px;
     }
+
+    .test {
+        width: 80%;
+    }
+
+    .form {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
+
+    .containerForm {
+        display: flex;
+        width: 100%;
+    }
+
+    #containerButton {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        width: 60%;
+    }
+
+    select, input{
+        width: 95%;
+        font-size: 16px;
+        text-align: center;
+    }
+
 }
 
 @media screen and (min-width: 993px) {
@@ -127,4 +157,33 @@ select, input{
         margin: 10%;
         max-height: 25%;
     }
+
+    .test {
+        width: 80%;
+    }
+
+    .form {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+      }
+  
+      .containerForm {
+          display: flex;
+          width: 100%;
+      }
+  
+      #containerButton {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          flex-wrap: wrap;
+          width: 40%;
+      }
+  
+      select, input{
+          width: 95%;
+          font-size: 16px;
+          text-align: center;
+      }
 }
